	PR c++/10931 	* g++.dg/expr/static_cast1.C: New test.

PR c++/10931
	* call.c (convert_like): Pass issue_conversion_warnings.
	(convert_like_with_context): Likewise.
	(convert_like_real): Add issue_conversion_warnings parameter.
	(perform_direct_initialization_if_possible): New function.
	* cp-tree.h (perform_direct_initialization_if_possible): Declare it.
	* typeck.c (check_for_casting_away_constness): New function.
	(build_static_cast): Rewrite.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@68506 138bc75d-0d04-0410-961f-82ee72b054a4